--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -160,31 +160,12 @@
             android:layout_alignEnd="@id/buttonSign"
             android:layout_weight="1"
             android:text="C" />
-
-        <Button
-            android:id="@+id/buttonPower"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@id/buttonClear"
-            android:layout_toRightOf="@id/buttonClear"
-            android:layout_weight="1"
-            android:text="^" />
-
-        <Button
-            android:id="@+id/buttonExponent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@id/buttonPower"
-            android:layout_toRightOf="@id/buttonPower"
-            android:layout_weight="1"
-            android:text="!" />
-
         <Button
             android:id="@+id/buttonEquals"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@id/buttonExponent"
-            android:layout_toRightOf="@id/buttonExponent"
+            android:layout_alignTop="@id/buttonClear"
+            android:layout_toRightOf="@id/buttonClear"
             android:layout_weight="1"
             android:text="=" />
 
@@ -196,8 +177,18 @@
             android:layout_marginLeft="28dip"
             android:layout_marginTop="128dip"
             android:ems="15"
+            android:inputType="numberSigned"
+            android:text="" />
+
+        <TextView
+            android:id="@+id/textViewOperation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="28dip"
+            android:layout_marginTop="64dip"
             android:inputType="textPersonName"
-            android:text="0" />
+            android:text="-" />
+
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
